--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,11 +1,51 @@
 /* Ionic Variables and Theming. For more info, please see:
 http://ionicframework.com/docs/theming/ */
 
-/** Ionic CSS Variables **/
+/*Overriding default Values*/
+/* swiper-container{
+  --swiper-navigation-size: 50px;
+  --swiper-navigation-top-offset: 50%;
+  --swiper-navigation-sides-offset: 60px;
+  --swiper-navigation-color:orange;
+  --swiper-theme-color: #00327b;
+--swiper-navigation-top-offset: 50%;
+--swiper-navigation-sides-offset: 10px;
+--swiper-navigation-color: var(--swiper-theme-color);
+
+--swiper-pagination-color: var(--swiper-theme-color);
+--swiper-pagination-left: auto;
+--swiper-pagination-right: 8px;
+--swiper-pagination-bottom: 8px;
+--swiper-pagination-top: auto;
+--swiper-pagination-fraction-color: inherit;
+--swiper-pagination-progressbar-bg-color: rgba(0,0,0,0.25);
+--swiper-pagination-progressbar-size: 4px;
+--swiper-pagination-bullet-size: 8px;
+--swiper-pagination-bullet-width: 8px;
+--swiper-pagination-bullet-height: 8px;
+--swiper-pagination-bullet-border-radius: 50%;
+--swiper-pagination-bullet-inactive-color: #000;
+--swiper-pagination-bullet-inactive-opacity: 0.2;
+--swiper-pagination-bullet-opacity: 1;
+--swiper-pagination-bullet-horizontal-gap: 4px;
+--swiper-pagination-bullet-vertical-gap: 6px;
+--swiper-scrollbar-border-radius: 10px;
+--swiper-scrollbar-top: auto;
+--swiper-scrollbar-bottom: 4px;
+--swiper-scrollbar-left: auto;
+--swiper-scrollbar-right: 4px;
+--swiper-scrollbar-sides-offset: 1%;
+--swiper-scrollbar-bg-color: rgba(0, 0, 0, 0.1);
+--swiper-scrollbar-drag-bg-color: rgba(0, 0, 0, 0.5);
+--swiper-scrollbar-size: 4px;
+
+} */
+
 .alert-button.sc-ion-alert-md {
   background-color: darkgray !important;
 }
 
+/** Ionic CSS Variables **/
 :root {
   /** primary **/
   --ion-color-primary: #f4f5f8;
